k8s/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: backend
  name: backend
spec:
  containers:
  - image: localhost:5000/my-backend
    name: backend
    ports:
    - containerPort: 3000
