k8s/frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: frontend  
  name: frontend
spec:
  containers:
  - image: localhost:5000/my-frontend:latest
    name: frontend
    ports:
    - containerPort: 80
  restartPolicy: Always
